[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This is study project which includes some easy exercizes for your brain."
authors = ["Egor Kryuchkov"]
readme = "README.md"
packages = [{include = "brain_games"}]
repository = 'https://github.com/EgorKryuchkov/Mindgames'

[tool.poetry.dependencies]
python = "^3.8.1"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
